# bbmp_interop

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bbmp_interop-config.cmake.in
cmake/: bbmp_interop_tools.cmake  generate_cpp_to_py_bindings.py
src/: CMakeLists.txt
src/bbmp_interop/: conversions.hpp  types.hpp
tests/: CMakeLists.txt  bbmp_subprocess.py  bbmp_util.py  test.cpp  test_export_import.py  test_generated_python_module.py  test_generator.py
